--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -187,7 +187,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
               <x>0</x>
               <y>0</y>
               <width>131</width>
-              <height>259</height>
+              <height>267</height>
              </rect>
             </property>
             <layout class="QGridLayout" name="gridLayout">
@@ -228,14 +228,14 @@ QToolBox::tab:selected { /* italicize selected tabs */
              <item row="6" column="0">
               <widget class="QComboBox" name="choicesComboBox"/>
              </item>
-             <item row="7" column="0">
+             <item row="8" column="0">
               <widget class="QPushButton" name="executeButton">
                <property name="text">
                 <string>Execute</string>
                </property>
               </widget>
              </item>
-             <item row="8" column="0">
+             <item row="9" column="0">
               <spacer name="verticalSpacer_2">
                <property name="orientation">
                 <enum>Qt::Vertical</enum>
@@ -248,6 +248,13 @@ QToolBox::tab:selected { /* italicize selected tabs */
                </property>
               </spacer>
              </item>
+             <item row="7" column="0">
+              <widget class="QProgressBar" name="ExecuteBar">
+               <property name="value">
+                <number>24</number>
+               </property>
+              </widget>
+             </item>
             </layout>
            </widget>
           </widget>
@@ -256,8 +263,8 @@ QToolBox::tab:selected { /* italicize selected tabs */
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>129</width>
-             <height>521</height>
+             <width>98</width>
+             <height>28</height>
             </rect>
            </property>
            <attribute name="label">
