--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -187,7 +187,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
               <x>0</x>
               <y>0</y>
               <width>131</width>
-              <height>267</height>
+              <height>300</height>
              </rect>
             </property>
             <layout class="QGridLayout" name="gridLayout">
@@ -218,6 +218,19 @@ QToolBox::tab:selected { /* italicize selected tabs */
                </property>
               </widget>
              </item>
+             <item row="10" column="0">
+              <spacer name="verticalSpacer_2">
+               <property name="orientation">
+                <enum>Qt::Vertical</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>20</width>
+                 <height>40</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
              <item row="5" column="0">
               <widget class="QLineEdit" name="commandParameter">
                <property name="maxLength">
@@ -235,23 +248,17 @@ QToolBox::tab:selected { /* italicize selected tabs */
                </property>
               </widget>
              </item>
-             <item row="9" column="0">
-              <spacer name="verticalSpacer_2">
-               <property name="orientation">
-                <enum>Qt::Vertical</enum>
-               </property>
-               <property name="sizeHint" stdset="0">
-                <size>
-                 <width>20</width>
-                 <height>40</height>
-                </size>
-               </property>
-              </spacer>
-             </item>
              <item row="7" column="0">
               <widget class="QProgressBar" name="ExecuteBar">
                <property name="value">
                 <number>24</number>
+               </property>
+              </widget>
+             </item>
+             <item row="9" column="0">
+              <widget class="QPushButton" name="abortButton">
+               <property name="text">
+                <string>Abort</string>
                </property>
               </widget>
              </item>
