Updated main and instrument attributes UI to new look.

--- a/ui/instrumentAttributes.ui
+++ b/ui/instrumentAttributes.ui
@@ -876,6 +876,13 @@
             </property>
            </widget>
           </item>
+          <item>
+           <widget class="QCheckBox" name="Staribus2StarinetCheckBox">
+            <property name="text">
+             <string>Staribus2Starinet</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
         <item row="1" column="0">
