Added executeButton css for Enabled, Disabled, Hover.

--- a/css/nixStyle.css
+++ b/css/nixStyle.css
@@ -48,10 +48,32 @@ QProgressBar::chunk {
     border: 0px;
 }
 
-QLineEdit::enabled {
+QLineEdit:enabled {
     background-color: #FFFFFF;
 }
 
-QLineEdit::disabled {
-    background-color: #CECECE;
+QLineEdit:disabled {
+    background-color: gray;
+}
+
+QPushButton#executeButton:enabled {
+            background-color: #c4df9b ;
+            }
+
+QPushButton#executeButton:disabled {
+            background-color: #b6c3d1 ;
+            }
+
+QPushButton#executeButton:hover {
+            background-color: #b9d988 ;
+            }
+
+QPushButton#executeButton:pressed {
+            background-color: #a2cc61 ;
+            }
+
+
+QPushButton#executeButton {
+        border-radius: 5px;
+        padding: 0.2em 0.2em 0.3em 0.2em;
 }
