Setting the QLineEdit border to 1px seems to fix the stange flicking that occurs on Windows 10

--- a/css/winStyle.css
+++ b/css/winStyle.css
@@ -47,6 +47,10 @@ QProgressBar::chunk {
     border: 0px;
 }
 
+QLineEdit {
+    border: 1px;
+}
+
 QLineEdit::enabled {
     background-color: #FFFFFF;
 }
