--- a/ui/dataViewer.ui
+++ b/ui/dataViewer.ui
@@ -15,7 +15,31 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
-    <widget class="QTableWidget" name="DataViewTableWidget"/>
+    <widget class="QTableWidget" name="DataViewTableWidget">
+     <property name="styleSheet">
+      <string notr="true">QTableWidget {
+    font-size: 11px;
+    background-color: '#FFFFE0';
+}
+
+QTableWidget QHeaderView {
+    font-size: 11px;
+}
+
+QTableWidget QHeaderView::section {
+    height: 18px;
+}</string>
+     </property>
+     <property name="editTriggers">
+      <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+     <property name="selectionMode">
+      <enum>QAbstractItemView::NoSelection</enum>
+     </property>
+     <property name="selectionBehavior">
+      <enum>QAbstractItemView::SelectItems</enum>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
