--- a/ui/instrumentAttributes.ui
+++ b/ui/instrumentAttributes.ui
@@ -6,14 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>500</width>
-    <height>503</height>
+    <width>526</width>
+    <height>416</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
-    <width>500</width>
-    <height>503</height>
+    <width>526</width>
+    <height>400</height>
    </size>
   </property>
   <property name="maximumSize">
@@ -35,6 +41,25 @@
       <string>Instrument Attributes</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
+      <item row="6" column="1">
+       <widget class="QLineEdit" name="Chan3LabelEdit">
+        <property name="minimumSize">
+         <size>
+          <width>120</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>160</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="maxLength">
+         <number>12</number>
+        </property>
+       </widget>
+      </item>
       <item row="3" column="1">
        <widget class="QLineEdit" name="Chan0LabelEdit">
         <property name="minimumSize">
@@ -299,25 +324,6 @@
         </property>
         <property name="text">
          <string>Label 3</string>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="1">
-       <widget class="QLineEdit" name="Chan3LabelEdit">
-        <property name="minimumSize">
-         <size>
-          <width>120</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>160</width>
-          <height>16777215</height>
-         </size>
-        </property>
-        <property name="maxLength">
-         <number>12</number>
         </property>
        </widget>
       </item>
@@ -943,19 +949,6 @@
          <string>Colour Picker</string>
         </property>
        </widget>
-      </item>
-      <item row="12" column="2">
-       <spacer name="verticalSpacer">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
       </item>
      </layout>
     </widget>
