--- a/css/macStyle.css
+++ b/css/macStyle.css
@@ -1,3 +1,5 @@
+
+
 QGroupBox {
     border: 1px solid gray;
     border-radius: 9px;
@@ -57,6 +59,7 @@ QLineEdit::disabled {
 
 #InstrumentAttributesDialog {
     min-width: 568px;
+    min-height: 500px;
 }
 
 QPushButton#executeButton:enabled {
@@ -83,3 +86,10 @@ QPushButton#executeButton {
         padding: 0.2em 0.2em 0.3em 0.2em;
 }
 
+QTextBrowser#metadataEdit {
+        font-size: 14pt;
+}
+
+QLineEdit#metadataNotesEdit {
+        font-size: 14pt;
+}
