--- a/css/nixStyle.css
+++ b/css/nixStyle.css
@@ -53,7 +53,7 @@ QLineEdit:enabled {
 }
 
 QLineEdit:disabled {
-    background-color: gray;
+    background-color: #CECECE;
 }
 
 QPushButton#executeButton:enabled {
