--- a/ui/metadata.ui
+++ b/ui/metadata.ui
@@ -46,6 +46,11 @@
        <pointsize>10</pointsize>
       </font>
      </property>
+     <property name="styleSheet">
+      <string notr="true">QTextBrowser {
+	background-color: '#FFFFE0';
+}</string>
+     </property>
     </widget>
    </item>
    <item row="3" column="0">
