Updated release notes to use css to set font size.  Updated associated css sheets.

--- a/css/macStyle.css
+++ b/css/macStyle.css
@@ -93,3 +93,7 @@ QTextBrowser#metadataEdit {
 QLineEdit#metadataNotesEdit {
         font-size: 14pt;
 }
+
+QTextEdit#releasenotesText {
+        font-size: 14pt;
+}
