--- a/css/winStyle.css
+++ b/css/winStyle.css
@@ -81,3 +81,15 @@ QPushButton#executeButton {
         border-radius: 5px;
         padding: 0.2em 0.2em 0.3em 0.2em;
 }
+
+QTextBrowser#metadataEdit {
+        font-size: 14pt;
+}
+
+QLineEdit#metadataNotesEdit {
+        font-size: 14pt;
+}
+
+QTextEdit#releasenotesText {
+        font-size: 14pt;
+}
